--- a/index.html
+++ b/index.html
@@ -255,27 +255,13 @@
             <div class="education-container" >
                 <div class="education-item">
                     <p>
-                        Sicelosethu Secondary School<br>
-                        Dec 2016<br>
-                        Matric certificate
-                    </p>
-                </div>
-                <div class="education-item">
-                    <p>
-                        University Of Limpopo<br>
-                        Feb 2019 - incomplete<br>
-                        Bsc in Mathematical and Computational Science
-                    </p>
-                </div>
-
-                <div class="education-item">
-                    <p>
                         Umuzi Academy<br>
-                        May 2021 - Present<br>
+                        May 2024 - Present<br>
                         National Certificate in Information Technology<br>
                         (System Development) (SAQA ID 48872)
                     </p>
                 </div>
+
                 <div class="education-item">
                     <p>
                         Coursera<br>
@@ -285,10 +271,24 @@
                         SQL for Data Science
                     </p>
                 </div>
+                <div class="education-item">
+                    <p>
+                        University Of Limpopo<br>
+                        Feb 2019 - incomplete<br>
+                        Bsc in Mathematical and Computational Science
+                    </p>
+                </div>
+                <div class="education-item">
+                    <p>
+                        Sicelosethu Secondary School<br>
+                        Dec 2016<br>
+                        Matric certificate
+                    </p>
+                </div>
             </div>
                 <p class="quote">
                 <div class="education-item">
-                    <a href="https://drive.google.com/drive/u/0/folders/1EmRZ3wuInO1kcWORMrhPWeeyI0Wl12AM" target="_blank">
+                    <a href="https://drive.google.com/file/d/19O2itjH_mGQndtJJw3FTxBmZAOJKWvF-/view?usp=sharing" target="_blank">
                         <img src="images/cv.jpeg" alt="CV Image">
                     </a>
                     <p>Click the image above to download my CV</p>
