--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="project">
             <h3>YouTube VA</h3>
             <p>A simple Python application to download YouTube videos and extract audio using `pytube` and `moviepy`</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/YouTube%20VA" target="_blank">
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/YouTube%20VA" >
             <img src="images/ytva.jpeg" alt="YouTube VA" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -350,7 +350,7 @@
         <div class="project">
             <h3>QR Gen</h3>
             <p>This is a simple QR Code Generator application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/QR%20Gen" target="_blank">
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/QR%20Gen" >
             <img src="images/qr.jpeg" alt="QR Gen" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -359,7 +359,7 @@
         <div class="project">
             <h3>Text2Audio Generator</h3>
             <p>This is a simple Text to Speech (TTS) converter application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/Text2Audio%20Generator" target="_blank">
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/Text2Audio%20Generator" >
             <img src="images/t2s.jpeg" alt="Text2Audio Generator" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -368,7 +368,7 @@
         <div class="project">
             <h3>De-Co-mpressor</h3>
             <p>This is a simple Compression Engine application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/De-Co-mpressor" target="_blank">
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/De-Co-mpressor" >
             <img src="images/deco.jpeg" alt="De-Co-mpressor" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
