--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </style>
 </head>
 <body>
-    <!-- Header Section -->
+
     <header>
         <h1>Sabelo Remember Ndlovu</h1>
         <p>Data Engineer, Data Analyst, Web Developer & Python Developer</p>
@@ -341,7 +341,7 @@
         <div class="project">
             <h3>YouTube VA</h3>
             <p>A simple Python application to download YouTube videos and extract audio using `pytube` and `moviepy`</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/YouTube%20VA" >
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/YouTube%20VA" target="_blank">
             <img src="images/ytva.jpeg" alt="YouTube VA" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -350,7 +350,7 @@
         <div class="project">
             <h3>QR Gen</h3>
             <p>This is a simple QR Code Generator application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/QR%20Gen" >
+            <a href="https://github.com/SRSuccesTemusaNdlovu/git-basic-exercises" target="_blank">
             <img src="images/qr.jpeg" alt="QR Gen" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -359,7 +359,7 @@
         <div class="project">
             <h3>Text2Audio Generator</h3>
             <p>This is a simple Text to Speech (TTS) converter application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/Text2Audio%20Generator" >
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/Text2Audio%20Generator" target="_blank">
             <img src="images/t2s.jpeg" alt="Text2Audio Generator" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -368,7 +368,7 @@
         <div class="project">
             <h3>De-Co-mpressor</h3>
             <p>This is a simple Compression Engine application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/De-Co-mpressor" >
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/De-Co-mpressor" target="_blank">
             <img src="images/deco.jpeg" alt="De-Co-mpressor" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
@@ -396,7 +396,7 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
+   
     <footer>
         <div class="contact-icons">
             <p>Get in touch with me through social media. </p>
