--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="project">
             <h3>QR Gen</h3>
             <p>This is a simple QR Code Generator application built using Python and Tkinter</p>
-            <a href="https://github.com/SRSuccesTemusaNdlovu/git-basic-exercises" target="_blank">
+            <a href="https://github.com/SRSuccesTemusaNdlovu/Persinal_projects/tree/main/QR%20Gen" target="_blank">
             <img src="images/qr.jpeg" alt="QR Gen" class="project-image">
         </a>
         <p>Click the image above to view the project</p>
